// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Button widget: All values set Render widget 1`] = `
<div>
  <div
    class="right"
  >
    <button
      class="survey-section__button button red small "
      type="button"
    >
      newLabel
    </button>
  </div>
</div>
`;

exports[`Button widget: Default values Render widget 1`] = `
<div>
  <div
    class="center"
  >
    <button
      class="survey-section__button button green large "
      type="button"
    >
      label
    </button>
  </div>
</div>
`;

exports[`Button widget: behavioral tests Button click, with modal, cancelled 1`] = `
<div
  aria-label="popupTitle"
  aria-modal="true"
  class="ReactModal__Content react-modal"
  role="dialog"
  tabindex="-1"
>
  <div>
    <div
      class="center"
    >
      <markdown
        remarkplugins="remark-gfm,[object Object]"
      >
        popupTitle
      </markdown>
    </div>
    <markdown
      class="confirm-popup"
      remarkplugins="remark-gfm,[object Object]"
    >
      popupContent
    </markdown>
    <div
      class="tr__form-buttons-container _center"
    >
      <div
        class="center"
      >
        <button
          class="button grey"
          type="button"
        >
          Cancel
        </button>
      </div>
      <div
        class="center"
      >
        <button
          class="button blue"
          type="button"
        >
          Confirm
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Widget invisible, should be null 1`] = `<div />`;

exports[`Widget loading, should be disabled 1`] = `
<div>
  <div
    class="center"
  >
    <button
      class="survey-section__button button green large disabled"
      disabled=""
      type="button"
    >
      label
    </button>
  </div>
</div>
`;
